# nicefk

./: .env.example  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  pyproject.toml
backend/: __init__.py
backend/app/: __init__.py  cli.py  main.py
backend/app/api/: admin.py  agent.py  deps.py  payments.py  public.py
backend/app/core/: cache.py  config.py  logging.py  security.py
backend/app/db/: base.py  bootstrap.py  session.py
backend/app/models/: __init__.py  cdk.py  config.py  goods.py  order.py
backend/app/schemas/: agent.py  cdk.py  channel.py  common.py  config.py  goods.py  order.py
backend/app/services/: auth_service.py  cdk_service.py  config_service.py  email_service.py  goods_service.py  order_service.py  source_service.py  task_service.py
backend/app/services/payments/: epay.py
backend/tests/: conftest.py  test_order_flow.py
docs/: design.md
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts
frontend/scripts/: obfuscate.mjs
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: AuthPage.tsx  ChannelQrModal.tsx  DeliveredCardList.tsx  MarkdownBlock.tsx  PublicPage.tsx  PublicRecentOrders.tsx  StatusTag.tsx
frontend/src/pages/: AdminDashboardPage.tsx  AdminLoginPage.tsx  AgentDashboardPage.tsx  AgentLoginPage.tsx  OrderSearchPage.tsx  OrderStatusPage.tsx  PublicGoodsPage.tsx
frontend/src/types/: index.ts
frontend/src/utils/: auth.ts  channelQr.ts  format.ts  pageTitle.ts  recentOrders.ts
